--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -60,6 +60,6 @@ $offcanvas-box-shadow: 0 1rem 3rem rgba(0, 0, 0, .175);
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../bootstrap/scss/utilities/api";
 
-// 8. Add additional custom code here
+// 8. Add additional CSS styles and custom classes here
 
 
